# chaitu-ycr-py-proj-template

./: 404.html  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  search.html  sitemap.xml
docs/: src_manual.md
search/: search_index.json
src_manual/: index.html
tests/: test_my_package.py
